# cav_take_home

src/imu_top_jitter/: package.xml  setup.cfg  setup.py
src/imu_top_jitter/imu_top_jitter/: imu_top_jitter.py
src/lap_time/: package.xml  setup.cfg  setup.py
src/lap_time/lap_time/: lap_time.py
src/slip_long_fl/: package.xml  setup.cfg  setup.py
src/slip_long_fl/slip_long_fl/: slip_long_fl.py
src/slip_long_fr/: package.xml  setup.cfg  setup.py
src/slip_long_fr/slip_long_fr/: slip_long_fr.py
src/slip_long_rl/: package.xml  setup.cfg  setup.py
src/slip_long_rl/slip_long_rl/: slip_long_rl.py
src/slip_long_rr/: package.xml  setup.cfg  setup.py
src/slip_long_rr/slip_long_rr/: slip_long_rr.py
src/vel_angle_x_front_left/: package.xml  setup.cfg  setup.py
src/vel_angle_x_front_left/vel_angle_x_front_left/: vel_angle_x_front_left.py
src/vel_angle_x_front_right/: package.xml  setup.cfg  setup.py
src/vel_angle_x_front_right/vel_angle_x_front_right/: vel_angle_x_front_right.py
src/vel_x_front_left/: package.xml  setup.cfg  setup.py
src/vel_x_front_left/vel_x_front_left/: vel_x_front_left.py
src/vel_x_front_right/: package.xml  setup.cfg  setup.py
src/vel_x_front_right/vel_x_front_right/: vel_x_front_right.py
src/vel_x_rear_left/: package.xml  setup.cfg  setup.py
src/vel_x_rear_left/vel_x_rear_left/: vel_x_rear_left.py
src/vel_x_rear_right/: package.xml  setup.cfg  setup.py
src/vel_y_front_left/: package.xml  setup.cfg  setup.py
src/vel_y_front_right/: package.xml  setup.cfg  setup.py
(+3 files in other folders)
